Add support for *_extras to `hud_export`
- Update docs
- Update desc with collate (via roxygen @include in hud_Export_r6.R)
### helpers
#### hud_formatted
  - include underscores
#### hud_feather
 - if directory doesn't exist, create it
### hud_export_r6
#### call_data
  - Use function name to determine the appropriate directory path. ** ASSUMES _extras, _spdat, _public WILL BE APPENDED TO FN NAME **
#### update_data
  - remove argument for `self` as it appears to cause recursive evaluation error
#### fetch
 - handle missing `col_types`
#### hud_export
  - `get_all` now `get_export` to differentiate from `get_extras`
  - `update_all` now `update_export`
  - add `get_extras` & `update_extras` methods
  - update `dirs` argument to be `extras = "data/extras"` (plural)
  - add `.hud_extras` to private
### hud_extras
  - fix `User_extras` look names
  - comment out Rmisc excel sheet #s

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,3 +17,13 @@ Imports:
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
+Collate: 
+    'aaa_imports.R'
+    'export_fields.R'
+    'helpers.R'
+    'hud_export.R'
+    'hud_extras.R'
+    'hud_export_r6.R'
+    'knn_c.R'
+    'setup_looker.R'
+    'universal_useful.R'
