Add `details` method to `fetch`/`call_data` that uses `lookr - getLook`
### clarity_api_r6
  - `details` method runs `getLook` to fetch the full spec. The description can easily be returned. Since it contains column names we need to be able to access this with each call so it's up to date.
### helpers
#### `hud_filename`
   - returns filename as a named vector
#### `hud_regex`
   - use the `^` in `hud_regex` to avoid rando files
 #### `hud_last_updated`
  - returns the last updated date with filenames as names

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,5 +25,6 @@ Collate:
     'hud_extras.R'
     'clarity_api_r6.R'
     'knn_c.R'
+    'model_names.R'
     'setup_looker.R'
     'universal_useful.R'
