Finalize revision for flexibility & dynamic updating of Looks
### clarity_api_r6
#### `fetch`
  - deprecated in favor of consolidation of simpler code in `call_data`
#### .init/initialize
  -  now takes `export_folder`, `daily_folder` - see readme
#### `get_folder_looks`
  - method for retrieving all looks in an arbitrary folder
### helpers
#### hud_rename_strings
  - Now removes spaces and leading Model names

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,17 +16,18 @@ Imports:
   stringr,
   UU
 Remotes:
-    yogat3ch/UU
+    yogat3ch/UU,
+    COHHIO/lookr
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1.9001
 Collate: 
     'aaa_imports.R'
+    'hud_extras.R'
+    'hud_export.R'
+    'clarity_api_r6.R'
     'export_fields.R'
     'helpers.R'
-    'hud_export.R'
-    'hud_extras.R'
-    'clarity_api_r6.R'
     'knn_c.R'
     'model_names.R'
     'setup_looker.R'
