--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,11 +5,13 @@ S3method(knn_dist,default)
 S3method(knn_dist,factor)
 export(.hud_export)
 export(clarity_api)
+export(folder_looks)
 export(hud_feather)
 export(hud_filename)
 export(hud_last_updated)
 export(hud_load)
 export(knn_dist)
+export(look_id_from_folder)
 export(setup_looker)
 importFrom(dplyr,`%>%`)
 importFrom(lubridate,`.__T__-:base`)
