Add `dirs` to exports

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(knn_dist,default)
 S3method(knn_dist,factor)
 export(.hud_export)
 export(clarity_api)
+export(dirs)
 export(folder_looks)
 export(hud_feather)
 export(hud_filename)
