--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(knn_dist,character)
 S3method(knn_dist,default)
 S3method(knn_dist,factor)
 export(.hud_export)
+export(Client_filter)
 export(clarity_api)
 export(dirs)
 export(folder_looks)
