--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,8 @@ export(hud_last_updated)
 export(hud_load)
 export(knn_dist)
 export(look_id_from_folder)
+export(make_link)
+export(make_linked_df)
 export(setup_looker)
 importFrom(dplyr,`%>%`)
 importFrom(lubridate,`.__T__-:base`)
