Add `hud_export_extract`, flatten output from `hud_last_updated`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(Client_filter)
 export(clarity_api)
 export(dirs)
 export(folder_looks)
+export(hud_export_extract)
 export(hud_feather)
 export(hud_filename)
 export(hud_last_updated)
