--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(hud_feather)
 export(hud_filename)
 export(hud_last_updated)
 export(hud_load)
+export(is_dev)
 export(knn_dist)
 export(look_id_from_folder)
 export(make_link)
