--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(.hud_export)
 export(Client_filter)
 export(clarity_api)
 export(dirs)
+export(find_clients)
 export(folder_looks)
 export(hud_export_extract)
 export(hud_feather)
