--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(Client_filter)
 export(clarity_api)
 export(dirs)
 export(find_clients)
+export(find_projects)
 export(folder_looks)
 export(hud_export_extract)
 export(hud_feather)
